# demo-tfa-api

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  tag.py
app/models/: model_template.py  model_tfa.py
app/routers/: template.py  tfa.py
app/services/: service_template.py  service_tfa.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
